doc/src/css/style.css
*, *:before, *:after { box-sizing: border-box; }

body { background: #fafaff; font-family: muli,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif; line-height: 1.45; margin: 0; }

a { text-decoration: none; }
p { color: #444; line-height: 1.6; margin: 0.8em 0; }
li { color: #444; line-height: 2; }
td { vertical-align: top; }
dl { line-height: 1.60; margin: 1.25rem; }
dd { margin-left: 1.5rem; }

nav.top { align-items: center; display: flex; justify-content: flex-start; flex-wrap: wrap; height: 6rem; padding: 2rem 0; width: 100%; }
nav.top .logo { margin-left: 3rem; }
nav.top .logo img { vertical-align: bottom; }
nav.top .version { color: #eee; font-size: .7rem; padding: 6px 0 0 .5rem; }
nav.top .version:hover { color: #e5a62e; }
nav.top ul { display: inline-block; list-style-type: none; margin: 0 .5em; vertical-align: middle; }
nav.top li { display: inline-block; padding: 0 1rem; }
nav.top ul a { color: #e2e9ee; }
nav.top ul a:hover, nav.top ul a.selected { color: #f3ad20; }
nav.top .github-logo { display: block; height: 1.8rem; margin-left: 1rem; width: 1.8rem; }
nav.top .github-logo svg path { fill: #fff; }

nav.sections { display: inline-flex; margin: 0 auto; padding: 10px; width: auto; }
nav.sections a { color: #4f46e5!important; margin: 2px; padding: 6px 14px; text-decoration: none; }
nav.sections a:hover { border-bottom: 2px solid #eee; }
nav.sections a.selected { border-bottom: 2px solid #4f46e5; }

.content { margin: 0 20px; }

.cols-2 { display: flex; flex-wrap: wrap; }
.cols-2 > div { padding: 2em 5rem; width: 50%; }

.index a { color: #fff; }
.index footer ul li a { color: #e2e9ee; }

.index nav.top .logo { cursor: default; pointer-events: none; }

.index header { margin: 1.6rem; margin-top: 4.6rem; }
.index header section { margin: 0 auto; text-align: center; }

.index header .logo { max-width: 80%; width: 450px; height: auto; }
.index header h2 { color: #fff; font-size: 2.6em; font-weight: 200; line-height: 1.2em; margin: 2.1rem auto; max-width: 850px; }
.index header h3 { color: #ccc; font-size: 1.4em; font-weight: 200; letter-spacing: .02rem; line-height: 1.5em; margin: .5rem; }
.index header .button { background: #e6a621; border-radius: 3px; color: #fff; cursor: pointer; display: inline-block; font-size: 1.1em; font-weight: bold; margin-top: 2rem; text-transform: uppercase; padding: .8rem 1.8rem .7em 1.8em; }
.index header .button:hover { background: #f3ad20; border-radius: 3px; color: #fff6ED; cursor: pointer; display: inline-block; font-size: 1.1em; font-weight: bold; margin-top: 2rem; text-transform: uppercase; padding: .8rem 1.8rem .7em 1.8em; }

.index body > section { background: #fff; margin: 4rem 0; padding: 2rem 4rem; }

.index .why { color: #fff; margin-bottom: 2rem; }
.index .why h2 { color: #e6a621; font-size: 1.8rem; font-weight: normal; }
.index .why p { color: #333; font-size: 1.3rem; font-weight: 200; line-height: 1.9rem; }

.index body > section.benchmark { background: #0a1922; color: #FFF; margin: 0; padding: 4.5rem 9rem; }
.index body > section.benchmark > div:first-child { display: inline-block; margin-bottom: -40px; position: relative; z-index: 2; }
.index body > section.benchmark > div:first-child h2 { margin-top: 0; }
.index body > section.benchmark > div:first-child a { color: #ebb951; float: right; font-size: .9em; }
.index body > section.benchmark > div:first-child a:hover { color: #ffd858; }

.wrap { margin: 0 auto; max-width: 1280px; }

.article article { min-height: 100vh; overflow: hidden; }
.article article > .wrap { display: flex; font-size: 1rem; padding: 0 1rem; }
.article aside { margin-right: 3rem; margin-top: 1.80rem; width: 250px }
.article aside button { display: none; }
.article aside ul { list-style-type: none; padding: 0; }
.article aside div { font-size: 14px; font-weight: bold; margin-bottom: 8px; }
.article aside > ul { margin-top: 3rem; }
.article aside li > ul { padding-left: 1rem; }
.article aside li { line-height: 1.85; white-space: nowrap; }
.article aside li h4 { color: #333; font-weight: bold }
.article aside ul a { display: block; font-size: 15px; margin: 0.1rem 0; padding: 0.3rem 0.6rem; }
.article aside ul a, .article aside ul a:visited { color: #333; }
.article aside ul a:hover, .article aside ul a.expanded { background: #edecff; border-radius: 3px; }
.article aside ul a.selected { background: #4f46e5; border-radius: 3px; color: #fff6ed; }
.article .content { flex-grow: 1; margin: 0 0 4em 0; min-width: 0; overflow-x: auto; width: 100%; }
.article .content a, .article .content a:visited { color: #5f943d; }
.article h1 { color: #0a1922; font-size: 2.2rem; font-weight: 500; }
.article nav + p { color: #666; font-size: .9em; font-weight: bold; }
.article p + h1 { font-size: 2.2rem; margin-top: -.5em; }
.article h2 { color: #0a1922; font-size: 1.8rem; font-weight: 500; }
.article h3 { color: #0a1922; margin-top: 40px; font-weight: 500; }
.article h4 { color: #0a1922; font-weight: 500; }
.article pre { background: #f4f4fb; border-radius: 3px; padding: 1rem; overflow-x: auto; }
.article code { background: #f4f4fb; border-radius: 2px; color: #454567; display: inline-block; font-size: 85%; padding: .2rem .5rem; position: relative; white-space: pre-wrap; }
.article code::before { background-color: transparent; bottom: 0; content: ""; left: 0; position: absolute; top: 0; width: .5rem; }
.article a code { color: #5f943d; }
.article pre code { padding: 0; }
.article blockquote { background: #edecff; border-left: 5px solid #5954ab; border-radius: 3px; margin: 0; padding: .5rem 1rem; }
.article blockquote p { color: #424063; }
.article blockquote > p + div pre { background: transparent; margin: 0; padding-left: 0; padding-top: 0; }
.article blockquote div + p { margin-top: 0; }
.article img { max-width: 100%; }

#edit-on-github { font-size: .9rem; font-weight: bold; margin-top: 4rem; text-align: right; }
#edit-on-github a { color: #777; }
#edit-on-github a:hover { color: #222; }
/* ... */

